--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -11,12 +11,21 @@ jobs:
     deploy_docker:
         runs-on: ubuntu-20.04
         steps:
-          - name: Deploy to Docker Hub 🚀
+          - name: 🚀 Deploy Docker image
             env:
                 docker_username: ${{ secrets.DOCKER_USERNAME }}
             if: env.docker_username
             run: |
                 docker pull ${{ secrets.DOCKER_USERNAME }}/concept:test-build
+                docker pull ${{ secrets.DOCKER_USERNAME }}/concept:latest
+                if [ \
+                    "$(docker inspect --format='{{index .RepoDigests 0}}' ${{ secrets.DOCKER_USERNAME }}/concept:test-build)" \
+                    == \
+                    "$(docker inspect --format='{{index .RepoDigests 0}}' ${{ secrets.DOCKER_USERNAME }}/concept:latest)" \
+                ]; then
+                    echo "No change to Docker image"
+                    exit 0
+                fi
                 docker tag \
                     ${{ secrets.DOCKER_USERNAME }}/concept:test-build \
                     ${{ secrets.DOCKER_USERNAME }}/concept:latest
