--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -8,31 +8,58 @@ on:
           - master
 
 jobs:
-    deploy_docker:
+    check_deploy:
         runs-on: ubuntu-20.04
+        outputs:
+            deploy: ${{ steps.check_deploy.outputs.deploy }}
         steps:
-          - name: 🚀 Deploy Docker image some change
+          - name: 📝 Check whether to deploy
+            id: check_deploy
             env:
                 docker_username: ${{ secrets.DOCKER_USERNAME }}
-            if: env.docker_username
             run: |
-                docker pull ${{ secrets.DOCKER_USERNAME }}/concept:test-build
-                docker pull ${{ secrets.DOCKER_USERNAME }}/concept:latest
-                if [ \
-                    "$(docker inspect --format='{{index .RepoDigests 0}}' ${{ secrets.DOCKER_USERNAME }}/concept:test-build)" \
-                    == \
-                    "$(docker inspect --format='{{index .RepoDigests 0}}' ${{ secrets.DOCKER_USERNAME }}/concept:latest)" \
-                ]; then
-                    echo "No change to Docker image"
-                    exit 0
+                if [ -n "${docker_username}" ]; then
+                    echo "Set for deployment"
+                    echo "::set-output name=deploy::1"
+                    echo "docker_username=${docker_username}" >> "${GITHUB_ENV}"
+                else
+                    echo "Not set for deployment"
                 fi
-                docker tag \
-                    ${{ secrets.DOCKER_USERNAME }}/concept:test-build \
-                    ${{ secrets.DOCKER_USERNAME }}/concept:latest
+
+    deploy_docker:
+        runs-on: ubuntu-20.04
+        needs: check_deploy
+        if: needs.check_deploy.outputs.deploy
+        steps:
+          - name: Checkout 🛎
+            uses: actions/checkout@v2
+          - name: 🐋 Pull Docker image
+            run: docker pull ${docker_username}/concept:test-build
+          - name: 🔧 Compile
+            run: |
+                docker run \
+                    -v "${GITHUB_WORKSPACE}":/github \
+                    --name concept-tmp \
+                    ${docker_username}/concept:test-build \
+                    bash -c ': \
+                        && cd / \
+                        && source ~/.bashrc \
+                        && rm -rf "${concept_dir}" \
+                        && cp -r /github/concept "${concept_dir}" \
+                        && (cd "${concept_dir}" && make distclean) \
+                        && concept \
+                        && (cd "${concept_dir}" && make clean_logs clean_params_cp) \
+                    '
+          - name: 🚀 Deploy Docker image
+            run: |
+                docker commit \
+                    --change='CMD ["bash"]' \
+                    concept-tmp \
+                    ${docker_username}/concept:latest
                 docker login \
                     -u ${{ secrets.DOCKER_USERNAME }} \
                     -p ${{ secrets.DOCKER_PASSWORD }} \
                     2>/dev/null
-                docker push ${{ secrets.DOCKER_USERNAME }}/concept:latest
+                docker push ${docker_username}/concept:latest
                 docker logout
 
