--- a/.github/workflows/deploy_docker.yml
+++ b/.github/workflows/deploy_docker.yml
@@ -21,7 +21,6 @@ jobs:
                 if [ -n "${docker_username}" ]; then
                     echo "Set for deployment"
                     echo "::set-output name=deploy::1"
-                    echo "docker_username=${docker_username}" >> "${GITHUB_ENV}"
                 else
                     echo "Not set for deployment"
                 fi
@@ -33,10 +32,14 @@ jobs:
         steps:
           - name: Checkout 🛎
             uses: actions/checkout@v2
-          - name: 🐋 Pull Docker image
+          - name: 📝 Set Docker username
+            env:
+                docker_username: ${{ secrets.DOCKER_USERNAME }}
             run: |
-                echo "A${docker_username}B"
-                docker pull ${docker_username}/concept:test-build
+                [ -n "${docker_username}" ] || docker_username=jmddk
+                echo "docker_username=${docker_username}" >> "${GITHUB_ENV}"
+          - name: 🐋 Pull Docker image
+            run: docker pull ${docker_username}/concept:test-build
           - name: 🔧 Compile
             run: |
                 docker run \
