--- a/.github/workflows/build_pullrequest.yml
+++ b/.github/workflows/build_pullrequest.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
     build:
-        runs-on: [self-hosted, linux, heavy]
+        runs-on: ubuntu-20.04
         steps:
           - name: Checkout 🛎
             uses: actions/checkout@v2
